<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:background="@color/blue"
        android:theme="?attr/actionBarTheme"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Add Hike"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNameOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/name_of_the_hike"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/name"
                android:background="@drawable/rounded_edittext_background"
                android:autofillHints="Name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/location"
                android:background="@drawable/rounded_edittext_background" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDateOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/date_of_the_high"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextDateOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/date_of_the_high"
                android:inputType="text"
                android:focusable="false"
                android:autofillHints=""
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="Parking available"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="37dp"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                >
                <TextView
                    android:id="@+id/Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/yes"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonYes"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="37dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                 />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLengthOfTheHike"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/length_of_the_hike"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editTextLengthOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/_100"
                android:inputType="numberDecimal"
                android:autofillHints="30" />
        </LinearLayout>
        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDifficulyLevel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/difficulylevel"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <Spinner
                android:id="@+id/editTextDifficulyLevel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/high"
                android:entries="@array/DifficultyLevelStatus"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/description_about_the_hike"
                android:background="@drawable/rounded_edittext_background"
                android:lines="5"
                android:gravity="top"
                android:autofillHints="input"
                android:inputType="textMultiLine" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            >

            <Button
                style="@style/backGroundButtonSubmit"
                android:id="@+id/addHike"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>