<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateHikeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue"
        android:theme="?attr/actionBarTheme">
        <Button
            android:id="@+id/backObservation"
            android:layout_width="70dp"
            android:layout_height="50dp"
            style="@style/backGroundButtonSubmit"
            android:drawableBottom="@drawable/baseline_arrow_back_24"
            android:textSize="25sp"/>
        <TextView
            android:layout_marginStart="12dp"
            android:layout_width="287dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Edit Hike"
            android:textColor="@color/white"
            android:textSize="30sp"
            />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNameOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/name_of_the_hike"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UpdateTextName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="Name"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UpdateTextLocation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/location" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDateOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/date_of_the_high"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UpdateTextDateOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_background"
                android:focusable="false"
                android:hint="@string/date_of_the_high"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="Parking available"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="37dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/yes"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/UpdateRadioButtonYes"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="37dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/UpdateRadioButtonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/length_of_the_hike"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UpdateTextLengthOfTheHike"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="30"
                android:background="@drawable/rounded_edittext_background"
                android:hint="@string/_100"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDifficulyLevel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/difficulylevel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/UpdateTextDifficulyLevel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext_background"
                android:entries="@array/DifficultyLevelStatus"
                android:hint="@string/high" />
        </LinearLayout>

        <LinearLayout
            style="@style/inputCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UpdateTextDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:autofillHints="input"
                android:background="@drawable/rounded_edittext_background"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/UpdateHike"
                style="@style/backGroundButtonSubmit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/update" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>